--- a/deno_jupyter_bug.ipynb
+++ b/deno_jupyter_bug.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "const document = null;\n",
-    "import * as p from \"https://l12.xyz/x/shortcuts/raw/plots.ts\"\n"
+    "import * as p from \"https://l12.xyz/x/shortcuts/raw/plots.ts\";"
    ]
   }
  ],
