--- a/deno_tinygo_wasm.ipynb
+++ b/deno_tinygo_wasm.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated offset is: 1.010723\n",
-      "Estimated slope is:  2.999270\n",
-      "R^2: 0.999998\n"
+      "Stats initialized\n",
+      "Estimated offset is: 0.988572\n",
+      "Estimated slope is:  3.000154\n",
+      "R^2: 0.999999\n"
      ]
     }
    ],
    "source": [
-    "import stats from './stats/mod.ts';\n",
-    "stats.example()"
+    "import stats from \"./stat/mod.ts\";\n",
+    "stats.example();"
    ]
   }
  ],
