port gonum stat

--- a/deno_tinygo_wasm.ipynb
+++ b/deno_tinygo_wasm.ipynb
@@ -2,24 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stats initialized\n",
-      "Estimated offset is: 0.988572\n",
-      "Estimated slope is:  3.000154\n",
-      "R^2: 0.999999\n"
+      "Estimated offset is: 0.982618\n",
+      "Estimated slope is:  3.000173\n",
+      "R^2: 0.999999\n",
+      "2 <object> <object>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mnull\u001b[22m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import stats from \"./stat/mod.ts\";\n",
+    "\n",
     "stats.example();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 \u0001\u0002\u0003\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mnull\u001b[22m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
