ref: exlude notebooks from stats

--- a/notebooks/deno_tinygo_wasm.ipynb
+++ b/notebooks/deno_tinygo_wasm.ipynb
@@ -24,8 +24,8 @@
     "const ys = [];\n",
     "\n",
     "for (let i = 0; i < 100; i++) {\n",
-    "    xs.push(i);\n",
-    "    ys.push((1 + 3 * i) + Math.random());\n",
+    "  xs.push(i);\n",
+    "  ys.push((1 + 3 * i) + Math.random());\n",
     "}\n",
     "\n",
     "const linreg = stats.LinearRegression(xs, ys, [], false);\n",
@@ -34,7 +34,7 @@
     "console.log(\"\\nLinear Regression Line:\");\n",
     "console.log(\"\\tEstimated offset is: \", linreg.alpha.toFixed(6));\n",
     "console.log(\"\\tEstimated slope is: \", linreg.beta.toFixed(6));\n",
-    "console.log(\"\\tR^2 is: \", r.toFixed(6));\n"
+    "console.log(\"\\tR^2 is: \", r.toFixed(6));"
    ]
   }
  ],
